src/objects/Apttus_Revenue2__Agreement_Fee__c.object
<CustomObject>
    <description>Represents a fee associated with an agreement</description>
    <fields>
        <fullName>Apttus_Revenue2__Actual_Amount__c</fullName>
        <description>Actual amount for the current period</description>
        <inlineHelpText>Actual amount for the current period</inlineHelpText>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Actual_Daily_Price__c</fullName>
        <description>The actual daily price</description>
        <inlineHelpText>The actual daily price</inlineHelpText>
        <label>Actual Daily Price</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Actual_End_Date__c</fullName>
        <formula>IF( NOT(ISNULL(Apttus_Revenue2__Fixed_End_Date__c)), Apttus_Revenue2__Fixed_End_Date__c, IF(NOT(ISNULL(Apttus_Revenue2__End_Milestone_Actual_Date__c)), Apttus_Revenue2__End_Milestone_Actual_Date__c, Apttus_Revenue2__End_Milestone_Expected_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Actual_Monthly_Price__c</fullName>
        <description>The actual monthly price</description>
        <label>Actual Monthly Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Actual_Start_Date__c</fullName>
        <formula>IF( NOT(ISNULL(Apttus_Revenue2__Fixed_Start_Date__c)), Apttus_Revenue2__Fixed_Start_Date__c, IF(NOT(ISNULL(Apttus_Revenue2__Start_Milestone_Actual_Date__c)), Apttus_Revenue2__Start_Milestone_Actual_Date__c, Apttus_Revenue2__Start_Milestone_Expected_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Actual_Units2__c</fullName>
        <description>Actual units for the current period</description>
        <inlineHelpText>Actual units for the current period</inlineHelpText>
        <label>Actual Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Actual_Units__c</fullName>
        <description>Actual units for the current period</description>
        <inlineHelpText>Actual units for the current period</inlineHelpText>
        <label>Actual Units (Old)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__AgreementLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the corresponding Agreement Line Item. Will be null for ASC-605.</description>
        <inlineHelpText>Reference to the corresponding Agreement Line Item.</inlineHelpText>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Agreement Fees</relationshipLabel>
        <relationshipName>AgreementFees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement__c</fullName>
        <description>Associated agreement</description>
        <inlineHelpText>Associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Fees</relationshipLabel>
        <relationshipName>Agreement_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Budget_Amount__c</fullName>
        <description>Budget amount for the current period</description>
        <inlineHelpText>Budget amount for the current period</inlineHelpText>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Budget_Recognized_Revenue__c</fullName>
        <description>Budgeted recognized revenue for the period</description>
        <inlineHelpText>Budgeted recognized revenue for the period</inlineHelpText>
        <label>Budget Recognized Revenue</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Budget_Units__c</fullName>
        <description>Budget units for the current period</description>
        <inlineHelpText>Budget units for the current period</inlineHelpText>
        <label>Budget Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Cumulative_Actual_Amount__c</fullName>
        <description>Cumulative actual amount</description>
        <inlineHelpText>Cumulative actual amount</inlineHelpText>
        <label>Cumulative Actual Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Cumulative_Actual_Units2__c</fullName>
        <description>Cumulative actual units</description>
        <inlineHelpText>Cumulative actual units</inlineHelpText>
        <label>Cumulative Actual Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Cumulative_Actual_Units__c</fullName>
        <description>Cumulative actual units</description>
        <inlineHelpText>Cumulative actual units</inlineHelpText>
        <label>Cumulative Actual Units (Old)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Cumulative_Budget_Amount__c</fullName>
        <description>Cumulative budget amount</description>
        <inlineHelpText>Cumulative budget amount</inlineHelpText>
        <label>Cumulative Budget Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Cumulative_Budget_Units__c</fullName>
        <description>Cumulative budget units</description>
        <inlineHelpText>Cumulative budget units</inlineHelpText>
        <label>Cumulative Budget Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Cumulative_Percent_Complete__c</fullName>
        <description>Cumulative Percent Complete</description>
        <inlineHelpText>Cumulative Percent Complete</inlineHelpText>
        <label>Cumulative Percent Complete</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Cumulative_Recognized_Amount__c</fullName>
        <description>Cumulative recognized amount</description>
        <inlineHelpText>Cumulative recognized amount</inlineHelpText>
        <label>Cumulative Recognized Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Current_Period_Date__c</fullName>
        <description>The current period date</description>
        <inlineHelpText>The current period date</inlineHelpText>
        <label>Current Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Current_Period_Number__c</fullName>
        <description>Current period number</description>
        <inlineHelpText>Current period number</inlineHelpText>
        <label>Current Period Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Customer_Revenue__c</fullName>
        <description>Customer reported revenue</description>
        <inlineHelpText>Customer reported revenue</inlineHelpText>
        <label>Customer Revenue</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Deferred_Balance_Amount__c</fullName>
        <description>Deferred balance amount</description>
        <inlineHelpText>Deferred balance amount</inlineHelpText>
        <label>Deferred Balance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__End_Milestone_Actual_Date__c</fullName>
        <formula>Apttus_Revenue2__End_Milestone__r.Apttus_Revenue2__Actual_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Milestone Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__End_Milestone_Expected_Date__c</fullName>
        <formula>Apttus_Revenue2__End_Milestone__r.Apttus_Revenue2__Expected_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Milestone Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__End_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Milestone associated with the end date</description>
        <inlineHelpText>Milestone associated with the end date</inlineHelpText>
        <label>End Milestone</label>
        <referenceTo>Apttus_Revenue2__Milestone__c</referenceTo>
        <relationshipLabel>Agreement Fees (End Milestone)</relationshipLabel>
        <relationshipName>Agreement_Fees_End_Milestone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Per User</fullName>
                </value>
                <value>
                    <fullName>Per Table</fullName>
                </value>
                <value>
                    <fullName>Per Table - Cumulative</fullName>
                </value>
                <value>
                    <fullName>% of Revenue</fullName>
                </value>
                <value>
                    <fullName>Revenue Share</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Fixed_End_Date__c</fullName>
        <label>Fixed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Fixed_Start_Date__c</fullName>
        <label>Fixed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Fixed_Variable__c</fullName>
        <label>Fixed / Variable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Flat_Fee__c</fullName>
        <label>Flat Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Actual_Amount__c</fullName>
        <description>Forecast amount for the current period</description>
        <inlineHelpText>Forecast amount for the current period</inlineHelpText>
        <label>Forecast Actual Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Actual_Units2__c</fullName>
        <description>Forecast units for the current period</description>
        <inlineHelpText>Forecast units for the current period</inlineHelpText>
        <label>Forecast Actual Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Actual_Units__c</fullName>
        <description>Forecast units for the current period</description>
        <inlineHelpText>Forecast units for the current period</inlineHelpText>
        <label>Forecast Actual Units (Old)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Cumulative_Actual_Amount__c</fullName>
        <description>Forecast cumulative actual amount</description>
        <inlineHelpText>Forecast cumulative actual amount</inlineHelpText>
        <label>Forecast Cumulative Actual Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Cumulative_Actual_Units2__c</fullName>
        <description>\Forecast cumulative actual units</description>
        <inlineHelpText>Forecast cumulative actual units</inlineHelpText>
        <label>Forecast Cumulative Actual Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Cumulative_Actual_Units__c</fullName>
        <description>Forecast cumulative actual units</description>
        <inlineHelpText>Forecast cumulative actual units</inlineHelpText>
        <label>Forecast Cumulative Actual Units (Old)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Cumulative_Percent_Complete__c</fullName>
        <description>Forecast Cumulative Percent Complete</description>
        <inlineHelpText>Forecast Cumulative Percent Complete</inlineHelpText>
        <label>Forecast Cumulative Percent Complete</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Cumulative_Recognized_Amount__c</fullName>
        <description>Forecast cumulative recognized amount</description>
        <inlineHelpText>Forecast cumulative recognized amount</inlineHelpText>
        <label>Forecast Cumulative Recognized Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Daily_Price__c</fullName>
        <description>The forecast daily price</description>
        <inlineHelpText>The forecast daily price</inlineHelpText>
        <label>Forecast Daily Price</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Deferred_Balance_Amount__c</fullName>
        <description>Forecast deferred balance amount</description>
        <inlineHelpText>Forecast deferred balance amount</inlineHelpText>
        <label>Forecast Deferred Balance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forecast fee active indicator</description>
        <inlineHelpText>Forecast fee active indicator</inlineHelpText>
        <label>Forecast Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Monthly_Price__c</fullName>
        <description>The forecast monthly price</description>
        <label>Forecast Monthly Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Period_Date__c</fullName>
        <description>The forecast period date</description>
        <inlineHelpText>The forecast period date</inlineHelpText>
        <label>Forecast Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Period_Number__c</fullName>
        <description>Forecast period number</description>
        <inlineHelpText>Forecast period number</inlineHelpText>
        <label>Forecast Period Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Invoice_Date__c</fullName>
        <description>Invoice date</description>
        <inlineHelpText>Invoice date</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Invoice_Number__c</fullName>
        <description>Invoice number</description>
        <inlineHelpText>Invoice number</inlineHelpText>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fee active indicator</description>
        <inlineHelpText>Indicates whether the fee is available for revenue recognition</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Is_End_Date_Milestone_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is End Date Milestone Based?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Is_Start_Date_Milestone_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Start Date Milestone Based?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Number_Of_Adjustments__c</fullName>
        <description>Indicates the number of adjustments associated with the fee</description>
        <label>Number Of Adjustments</label>
        <summaryForeignKey>Apttus_Revenue2__Agreement_Fee_Adjustment__c.Apttus_Revenue2__Agreement_Fee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__One_Time_Recurring__c</fullName>
        <label>One Time / Recurring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Percent_of_Revenue__c</fullName>
        <label>Percent of Revenue</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__PerformanceObligationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the corresponding Performance Obligation. For ASC-605 this field will be null.</description>
        <inlineHelpText>Reference to the corresponding Performance Obligation.</inlineHelpText>
        <label>Performance Obligation</label>
        <referenceTo>Apttus__Obligation__c</referenceTo>
        <relationshipLabel>Agreement Fees</relationshipLabel>
        <relationshipName>AgreementFees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevRec_Rule_Text__c</fullName>
        <description>Revenue recognition rule picklist value</description>
        <inlineHelpText>Revenue recognition rule picklist value</inlineHelpText>
        <label>RevRec Rule Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevRec_Rule__c</fullName>
        <description>Revenue recognition rule</description>
        <inlineHelpText>Revenue recognition rule</inlineHelpText>
        <label>RevRec Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription - Month</fullName>
                </value>
                <value>
                    <fullName>Subscription - Day</fullName>
                </value>
                <value>
                    <fullName>Ratable - Month</fullName>
                </value>
                <value>
                    <fullName>Ratable - Day</fullName>
                </value>
                <value>
                    <fullName>Immediate</fullName>
                    <default>true</default>
                    <label>Immediate</label>
                </value>
                <value>
                    <fullName>Percentage Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevRec_Term_Days__c</fullName>
        <description>Indicates the revenue recognition term in days from the start date</description>
        <inlineHelpText>Indicates the revenue recognition term in days from the start date</inlineHelpText>
        <label>RevRec Term (Days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevRec_Term_Months__c</fullName>
        <description>Indicates the revenue recognition term in months from the start date</description>
        <inlineHelpText>Indicates the revenue recognition term in months from the start date</inlineHelpText>
        <label>RevRec Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevRec_Term__c</fullName>
        <description>Indicates the revenue recognition term in months from the start date</description>
        <inlineHelpText>Indicates the revenue recognition term in months from the start date</inlineHelpText>
        <label>RevRec Term</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Revenue_Subtype_Text__c</fullName>
        <description>Revenue subtype picklist value</description>
        <inlineHelpText>Revenue subtype picklist value</inlineHelpText>
        <label>Revenue Subtype Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Revenue_Subtype__c</fullName>
        <label>Revenue Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Revenue2__Revenue_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active User Server Fees</fullName>
                </value>
                <value>
                    <fullName>Software Maintenance</fullName>
                </value>
                <value>
                    <fullName>Porting</fullName>
                </value>
                <value>
                    <fullName>Link Updates</fullName>
                </value>
                <value>
                    <fullName>Database Updates</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Finger Print Updates</fullName>
                </value>
                <value>
                    <fullName>Advertising Revenue</fullName>
                </value>
                <value>
                    <fullName>Commission Income</fullName>
                </value>
                <value>
                    <fullName>Ecommerce Revenue</fullName>
                </value>
                <value>
                    <fullName>Flat Fee Income</fullName>
                </value>
                <value>
                    <fullName>Production based</fullName>
                </value>
                <value>
                    <fullName>Revenue Share</fullName>
                </value>
                <value>
                    <fullName>SW License</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Revenue_Type_Text__c</fullName>
        <description>Revenue type picklist value</description>
        <inlineHelpText>Revenue type picklist value</inlineHelpText>
        <label>Revenue Type Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Start_Milestone_Actual_Date__c</fullName>
        <formula>Apttus_Revenue2__Start_Milestone__r.Apttus_Revenue2__Actual_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Milestone Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Start_Milestone_Expected_Date__c</fullName>
        <formula>Apttus_Revenue2__Start_Milestone__r.Apttus_Revenue2__Expected_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Milestone Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Start_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Milestone associated with the start date</description>
        <inlineHelpText>Milestone associated with the start date</inlineHelpText>
        <label>Start Milestone</label>
        <referenceTo>Apttus_Revenue2__Milestone__c</referenceTo>
        <relationshipLabel>Agreement Fees (Start Milestone)</relationshipLabel>
        <relationshipName>Agreement_Fees_Start_Milestone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Term_Months__c</fullName>
        <description>Indicates the duration in months from the start date</description>
        <inlineHelpText>Indicates the duration in months from the start date</inlineHelpText>
        <label>Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__TransactionPrice__c</fullName>
        <description>Transaction Price from the corresponding Agreement Line Item. For ASC-605 this field will be null.</description>
        <inlineHelpText>Transaction Price from the corresponding Agreement Line Item.</inlineHelpText>
        <label>Transaction Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Agreement Fee</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Agreement Fee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Apttus_Revenue2__Fee_Type_is_required</fullName>
        <active>true</active>
        <description>Fee Type is required</description>
        <errorConditionFormula>ISPICKVAL( Apttus_Revenue2__Fee_Type__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Apttus_Revenue2__Fee_Type__c</errorDisplayField>
        <errorMessage>Fee Type must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus_Revenue2__Fee_requires_revenue_recognition_rule</fullName>
        <active>true</active>
        <description>Fee requires a revenue recognition rule to be specified</description>
        <errorConditionFormula>ISPICKVAL( Apttus_Revenue2__RevRec_Rule__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Apttus_Revenue2__RevRec_Rule__c</errorDisplayField>
        <errorMessage>Please specify a Revenue recognition rule for the fee</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus_Revenue2__Fixed_or_Variable_is_required</fullName>
        <active>false</active>
        <description>Fee has to be specified as either a Fixed or Variable Fee</description>
        <errorConditionFormula>ISPICKVAL( Apttus_Revenue2__Fixed_Variable__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Apttus_Revenue2__Fixed_Variable__c</errorDisplayField>
        <errorMessage>Please specify Fee as either Fixed or Variable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus_Revenue2__Flat_Fee_required_for_fee_type_Flat_Fee</fullName>
        <active>true</active>
        <description>Flat Fee must be entered if Fee Type is Flat Fee</description>
        <errorConditionFormula>AND(ISPICKVAL(Apttus_Revenue2__Fee_Type__c,&quot;Flat Fee&quot;), ISNULL( Apttus_Revenue2__Flat_Fee__c ))</errorConditionFormula>
        <errorDisplayField>Apttus_Revenue2__Flat_Fee__c</errorDisplayField>
        <errorMessage>Flat Fee is required if Fee Type is Flat Fee</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus_Revenue2__Frequency_required_for_Recurring_Fees</fullName>
        <active>true</active>
        <description>Frequency is required for a recurring fee</description>
        <errorConditionFormula>AND(ISPICKVAL( Apttus_Revenue2__One_Time_Recurring__c, &quot;Recurring&quot;), ISPICKVAL( Apttus_Revenue2__Frequency__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Apttus_Revenue2__Frequency__c</errorDisplayField>
        <errorMessage>Frequency must be entered for a Recurring Fee</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus_Revenue2__Percent_of_Revenue_reqd_for_the_Fee_Type</fullName>
        <active>true</active>
        <description>If Fee type is % of Revenue or Revenue Share, then Percent of Revenue must be entered.</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Apttus_Revenue2__Fee_Type__c,&quot;% of Revenue&quot;), ISPICKVAL(Apttus_Revenue2__Fee_Type__c,&quot;Revenue Share&quot;)), ISNULL(  Apttus_Revenue2__Percent_of_Revenue__c ))</errorConditionFormula>
        <errorDisplayField>Apttus_Revenue2__Percent_of_Revenue__c</errorDisplayField>
        <errorMessage>Percent of Revenue is required if Fee Type is % of Revenue or Revenue Share</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus_Revenue2__Unit_Price_for_Fee_Type_equals_PerUnit</fullName>
        <active>true</active>
        <description>If Fee type is Per Unit or Per User or Revenue Share, then a Unit Price must be entered.</description>
        <errorConditionFormula>AND( OR(ISPICKVAL(Apttus_Revenue2__Fee_Type__c ,&quot;Per Unit&quot;), ISPICKVAL(Apttus_Revenue2__Fee_Type__c,&quot;Per User&quot;), ISPICKVAL(Apttus_Revenue2__Fee_Type__c,&quot;Revenue Share&quot;)), ISNULL(Apttus_Revenue2__Unit_Price__c ))</errorConditionFormula>
        <errorDisplayField>Apttus_Revenue2__Unit_Price__c</errorDisplayField>
        <errorMessage>Unit Price is required if Fee Type is Per Unit or Per User or Revenue Share</errorMessage>
    </validationRules>
</CustomObject>